# TemperatureAnalysisAndMonitoring

./: .gitignore  README.md  pyproject.toml  requirements.txt  ИИ_ДЗ_1.ipynb
data/: temperature_data.csv
notebooks/: analysis.ipynb
src/: analysis.py  app.py  weather_api.py
utils/: utils.py
